# percentage-rust

./: LICENSE  README.md  README.zh-cn.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: battery_icon_generator.rs  main.rs
