[package]
name = "percentage-rust"
version = "0.1.0"
description = "A Tauri App"
authors = ["OrdosX"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-ico", "image-png" ] }
tauri-plugin-opener = "2"
serde_json = "1.0.140"
battery = "0.7.8"
image = "0.25.5"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
anyhow = "1.0.98"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
